--- a/src/component/NewSudentData/DataSubmitForm.css
+++ b/src/component/NewSudentData/DataSubmitForm.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(51, 51, 51);
+  font-family: sans-serif;
 }
 .data-container {
   display: flex;
@@ -20,7 +21,6 @@ body {
   color: black;
   font-size: 20px;
   font-weight: bold;
-  /*font-family: "Open Sans", "Helvetica Neue", sans-serif;*/
 }
 .submit-buttom {
   background-color: rgb(63, 199, 199);
@@ -30,7 +30,7 @@ body {
   min-width: 150px;
   border: 1px solid black;
   margin-top: 5px;
-  font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: sans-serif;
   font-size: 15px;
   font-weight: bold;
   transition-property: box-shadow, background-color;
@@ -39,7 +39,7 @@ body {
 }
 .submit-buttom:hover {
   background-color: rgb(49, 49, 49);
-  box-shadow: 0px 0px 12px aqua;
+  border-color: aqua;
   color: aqua;
 }
 .student-name,
@@ -51,7 +51,7 @@ body {
   border: 2px solid grey;
   border-radius: 5px;
   background-color: rgb(50, 50, 50);
-  font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: sans-serif;
   font-size: 20px;
   color: aqua;
 }
